fix(tabs): too many tabs no longer overflow and scroll instead

--- a/venator-app/src/components/tab-bar.css
+++ b/venator-app/src/components/tab-bar.css
@@ -1,38 +1,32 @@
-#tabs {
+.tabbar {
     height: 28px;
     background: #2b2b2b;
     padding: 0 20px;
-    border-bottom: 1px solid #A8A8A8;
+    user-select: none;
 
     display: flex;
     flex-direction: row;
     align-items: flex-end;
 }
 
-.selected-tab {
-    flex: 0 0 180px;
-    height: 25px;
-    background-color: #E8E8E8;
-    border: 1px solid #A8A8A8;
-    border-bottom: none;
-    padding: 0px 8px;
-    translate: 0 1px;
+.tabs {
+    flex: 1;
+    gap: 1px;
 
-    text-wrap: nowrap;
-    overflow: hidden;
-
-    padding-right: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    overflow-x: hidden;
+    overflow-y: clip;
 }
 
 .tab {
-    flex: 0 1 180px;
-
-    height: 22px;
+    position: relative;
+    flex: 0 1 200px;
+    height: 21px;
     background-color: #CCCCCC;
-    border: 1px solid #A8A8A8;
-    border-bottom: none;
+    border-bottom: 1px solid #A8A8A8;
     padding: 0px 8px;
-    margin-left: -1px;
 
     text-wrap: nowrap;
     overflow: hidden;
@@ -40,7 +34,24 @@
     padding-right: 20px;
 }
 
-#new-tab {
+.tab.active {
+    flex: 0 0 200px;
+    height: 24px;
+    background-color: #E8E8E8;
+    border-bottom: none;
+}
+
+.tab span {
+    position: absolute;
+    bottom: 0;
+}
+
+.tab.active span {
+    bottom: 2px;
+}
+
+.new-tab {
+    flex: 0;
     background: transparent;
     border: none;
     opacity: 75%;
@@ -48,6 +59,11 @@
     margin-left: 2px;
 }
 
-#new-tab:hover {
+.new-tab img {
+    width: 16px;
+    height: 16px;
+}
+
+.new-tab:hover {
     opacity: 100%;
 }
